# waste-semantic-segmentation

./: .gitattributes  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
configs/environment/: waste-semantic-segmentation.yaml
configs/pre-commit/: .pre-commit-config.yaml
configs/project/: main.yaml
configs/project/cfg_folder_1/: option_1.yaml  option_2.yaml
configs/project/data/: data.yaml
configs/project/data/dataset/: dataset_complete.yaml  dataset_simple.yaml
configs/project/env_variables/: env_1.yaml
configs/project/experiment/: grid_search.yaml
configs/project/hydra/job_logging/: custom.yaml
configs/project/model/: ENet.yaml
configs/project/model/ENet/: ENet.yaml
configs/project/model/ENet/experiment/: grid_search.yaml
configs/project/model/ENet/version/: v0.0.1.yaml
configs/project/model/version/: v0.0.1.yaml
configs/project/model_version/: ENet_v0.0.1.yaml  ENet_v0.0.2.yaml
configs/project/version/: v0.0.1.yaml  v0.0.2.yaml
src/: __init__.py  custom_transforms.py  loading_data.py  resortit.py  script_1.py  utils.py
src/model/ENet/: model.py  train_val.py
tests/: test_script_1.py
