[tool.poetry]
name = "waste-semantic-segmentation"
version = "0.0.0"
description = "Project for the Machine Learning and Deep Learning course of Data Science and Engineering Master Degree at Politecnico di Torino"
authors = ["edoch <edo_chio@hotmail.it>"]
license = "Proprietary"
readme = "README.md"
classifiers = ["Private :: Do not Upload"]
exclude = ["**"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
hydra-core = "^1.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pre-commit = "^3.5.0"
ipykernel = "^6.26.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"